tests/baselines/reference/useBeforeDeclaration_destructuring(strict=true).errors.txt
useBeforeDeclaration_destructuring.ts(1,1): error TS2448: Block-scoped variable 'a' used before its declaration.
useBeforeDeclaration_destructuring.ts(2,6): error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== useBeforeDeclaration_destructuring.ts (2 errors) ====
    a;
    ~
!!! error TS2448: Block-scoped variable 'a' used before its declaration.
!!! related TS2728 useBeforeDeclaration_destructuring.ts:2:6: 'a' is declared here.
    let {a, b = a} = {a: '', b: 1};
         ~
!!! error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    b;
    
    function test({c, d = c}: Record<string, number>) {}
    